<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg_classic"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/widget_title_classic"
            android:textColor="@color/ink"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widgetPendingBadge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_chip_light"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/mutedInk"
            android:textSize="11sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/widget_chip_light"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_success_label"
                android:textColor="@color/mutedInk"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/widgetSuccessCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/widgetSuccess"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/widget_chip_light"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_error_label"
                android:textColor="@color/mutedInk"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/widgetErrorCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/widgetError"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/widget_chip_light"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/widget_pending_label"
                android:textColor="@color/mutedInk"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/widgetPendingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/widgetPending"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/widget_last_status_label"
        android:textColor="@color/mutedInk"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/widgetLastStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:maxLines="3"
        android:textColor="@color/ink"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/widgetRetryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/widget_action_light"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/widget_retry_button"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold" />
</LinearLayout>
